# keymaker

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  headjack-keymaker.ipynb  pyproject.toml
.github/workflows/: python-checks.yml
docs/: README.md  build-docs.sh
docs/assets/css/_page/: _home.scss
docs/assets/scss/: _bootstrap-variables.scss
docs/config/_default/: config.toml  menu.toml  params.toml
docs/content/: streaming-and-decoding.md
docs/content/0.1.0/: accessing-completions-chat-models.md  advanced-usage-and-customization.md  formatting-and-control-flow.md  getting-started.md  streaming-and-decoding.md
docs/content/0.1.0/docs/accessing-completions-chat-model/: index.md
docs/content/0.1.0/docs/advanced-usage-and-customization/: index.md
docs/content/0.1.0/docs/constraints/: index.md
docs/content/0.1.0/docs/contributing/: index.md
docs/content/0.1.0/docs/formatting-and-control-flow/: index.md
docs/content/0.1.0/docs/getting-started/: index.md
docs/content/0.1.0/docs/models/: index.md
docs/content/0.1.0/docs/streaming-and-decoding/: index.md
docs/content/0.1.0/posts/theme-doc/: post.md
docs/content/versions/: _index.md
docs/layouts/: index.html
docs/layouts/_default/: baseof.html
docs/static/css/: termynal.css
examples/: A Day at the Beach.ipynb  Basic.ipynb  Pandaman.ipynb  Template.ipynb  chatgpt-llama-streaming-tools.ipynb
keymaker/: __about__.py  __init__.py  prompt.py  types.py
keymaker/constraints/: __init__.py  base.py  json.py  logical.py  model.py  options.py  parser.py  regex.py  stops.py
keymaker/models/: __init__.py  base.py  huggingface.py  litellm.py  llama_cpp.py  openai.py  vllm.py
keymaker/utils/: __init__.py  chat.py  exceptions.py  formatted_completion.py  general.py
tests/: conftest.py
tests/constraints/: test_options.py  test_regex.py
